RESOLVED FIXED237349
AX: Handle null FileList in RenderFileUploadControl::fileTextValue()
https://bugs.webkit.org/show_bug.cgi?id=237349
Summary AX: Handle null FileList in RenderFileUploadControl::fileTextValue()
Tyler Wilcock
Reported 2022-03-01 17:13:00 PST
In rare circumstances, it's possible for the FileList associated with RenderFileUploadControl::inputElement (HTMLInputElement::files()) to be null. We should avoid crashing in these scenarios.
Attachments
Patch (2.04 KB, patch)
2022-03-01 17:47 PST, Tyler Wilcock
no flags
Patch (2.04 KB, patch)
2022-03-01 18:18 PST, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-03-01 17:13:12 PST
Tyler Wilcock
Comment 2 2022-03-01 17:47:57 PST
chris fleizach
Comment 3 2022-03-01 17:56:56 PST
Comment on attachment 453555 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=453555&action=review > Source/WebCore/rendering/RenderFileUploadControl.cpp:261 > + return String(); return { };
Tyler Wilcock
Comment 4 2022-03-01 18:18:19 PST
Tyler Wilcock
Comment 5 2022-03-01 18:19:20 PST
> > Source/WebCore/rendering/RenderFileUploadControl.cpp:261 > > + return String(); > > return { }; Fixed.
EWS
Comment 6 2022-03-02 10:55:13 PST
Committed r290738 (247984@main): <https://commits.webkit.org/247984@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453559 [details].
Note You need to log in before you can comment on or make changes to this bug.